--- a/weekFive/cube3D.html
+++ b/weekFive/cube3D.html
@@ -15,20 +15,28 @@
     <h1>Karol Uciecha</h1>
     <script type="text/javascript">
 
-        // Scene creation
+        // ===== SCENE SETUP =====
         const scene = new THREE.Scene();
-
-        // Create renderer and set size to full window size
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         renderer.shadowMap.enabled = true; // Enable shadow mapping
         renderer.shadowMap.type = THREE.PCFSoftShadowMap; // Use soft shadows for smoother results
         document.body.appendChild(renderer.domElement);
 
-        // Create camera: fov 80, aspect ratio window size, near/far clipping planes
+        // Create camera: fov, aspect ratio window size, near/far clipping planes
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
         camera.position.set(60, 60, 80);
         camera.lookAt(0, 0, 0);
+
+        // ===== LIGHTING =====
+        var spotLight = new THREE.SpotLight(0xffffff, 1.2);
+        spotLight.position.set(50, 100, 50);
+        spotLight.castShadow = true; // Enable the spotlight to cast shadows
+        scene.add(spotLight);
+
+        // Add an ambient light to prevent dark shadows
+        var ambientLight = new THREE.AmbientLight(0x404040); // Soft white light
+        scene.add(ambientLight);
 
         // ===== SPHERE CLASS =====
         class Sphere {
@@ -63,56 +71,47 @@
 
                 // Bounce inside cube boundaries
                 const half = cubeSize / 2 - this.radius;
-                if (Math.abs(this.mesh.position.x) >= half) {
-                this.velocity.x = -this.velocity.x * this.bounceFactor;
-                this.mesh.position.x = Math.sign(this.mesh.position.x) * half;
+                ["x", "y", "z"].forEach(axis => {
+                if (Math.abs(this.mesh.position[axis]) >= half) {
+                    this.velocity[axis] = -this.velocity[axis] * this.bounceFactor;
+                    this.mesh.position[axis] = Math.sign(this.mesh.position[axis]) * half;
                 }
-                if (Math.abs(this.mesh.position.y) >= half) {
-                this.velocity.y = -this.velocity.y * this.bounceFactor;
-                this.mesh.position.y = Math.sign(this.mesh.position.y) * half;
-                }
-                if (Math.abs(this.mesh.position.z) >= half) {
-                this.velocity.z = -this.velocity.z * this.bounceFactor;
-                this.mesh.position.z = Math.sign(this.mesh.position.z) * half;
-                }
+                });
 
-                // Apply rotation (slows over time)
+                // Apply rotation
                 this.mesh.rotation.x += this.rotationSpeed;
                 this.mesh.rotation.y += this.rotationSpeed;
     }
     
     // Detect and handle collision with another sphere
-    checkCollision(other) {
+      checkCollision(other) {
         const posA = this.mesh.position;
         const posB = other.mesh.position;
         const dist = posA.distanceTo(posB);
         const minDist = this.radius + other.radius;
 
         if (dist < minDist) {
-            // Simple elastic collision effect: reverse velocities
-            const overlap = (minDist - dist) / 2;
+          // Reverse both directions
+          this.velocity.x = -this.velocity.x * this.bounceFactor;
+          this.velocity.y = -this.velocity.y * this.bounceFactor;
+          this.velocity.z = -this.velocity.z * this.bounceFactor;
 
-            // Move both spheres apart along Y-axis for simplicity
-            if (posA.y > posB.y) {
-                posA.y += overlap;
-                posB.y -= overlap;
-            } else {
-                posA.y -= overlap;
-                posB.y += overlap;
-            }
+          other.velocity.x = -other.velocity.x * other.bounceFactor;
+          other.velocity.y = -other.velocity.y * other.bounceFactor;
+          other.velocity.z = -other.velocity.z * other.bounceFactor;
 
-            // Exchange or reverse vertical velocities
-            const tempVel = this.velocityY;
-            this.velocityY = -other.velocityY * this.bounceFactor;
-            other.velocityY = -tempVel * other.bounceFactor;
+          // Slightly separate them so they don’t stick together
+          const direction = new THREE.Vector3().subVectors(posA, posB).normalize();
+          posA.addScaledVector(direction, 1);
+          posB.addScaledVector(direction, -1);
         }
-    }
+      }
 }
 
         // Create a new Spheres and add them to the scene
         const spheres = [
-            new Sphere(5, 0xffff00, -25, 15),
-            new Sphere(5, 0x00ffcc, 25, 30)
+            new Sphere(10, 0xffff00, -25, 15, 0),
+            new Sphere(10, 0x00ffcc, 25, 30, 0)
         ];
 
         spheres.forEach(s => s.addToScene(scene));
@@ -129,16 +128,6 @@
         const cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
         cube.receiveShadow = true;
         scene.add(cube);
-
-        // ===== LIGHTING =====
-        var spotLight = new THREE.SpotLight(0xffffff, 1.2);
-        spotLight.position.set(50, 100, 50);
-        spotLight.castShadow = true; // Enable the spotlight to cast shadows
-        scene.add(spotLight);
-
-        // Optionally add an ambient light to prevent dark shadows
-        var ambientLight = new THREE.AmbientLight(0x404040); // Soft white light
-        scene.add(ambientLight);
 
         // ===== ANIMATION LOOP =====
         function repeatMe() {
